@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2018-07-02 niel
+	Fix: Admin group list active/inactive pages broken by commit 8b5235b8.
 2018-06-19 niel
 	Fix: Update ./zed command to switch directories, so that lithium considers it part of the main
 		app. This is necessary as lithium v1.2 treats the commands differently if outside the 'app'
